--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -132,6 +132,7 @@
     <Compile Include="BLL\PWKQ\PWKQ_XFKGWQBLL.cs" />
     <Compile Include="BLL\PWKQ\PWKQ_YCMPBLL.cs" />
     <Compile Include="BLL\PWKQ\PWKQ_YLYJDPBLL.cs" />
+    <Compile Include="BLL\QZZP\QZZP_QZZPBLL.cs" />
     <Compile Include="BLL\RZGLBLL.cs" />
     <Compile Include="BLL\WDFBBLL.cs" />
     <Compile Include="BLL\WDSCBLL.cs" />
