--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -142,6 +142,7 @@
     <Compile Include="PWKQ\IPWKQ_YLYJDPBLL.cs" />
     <Compile Include="QZZP\IQZZP_JZZPBLL.cs" />
     <Compile Include="QZZP\IQZZP_QZZPBLL.cs" />
+    <Compile Include="SHFW\ISHFW_SHFW_BJBLL.cs" />
     <Compile Include="XXYL\IXXYL_DIYSGFBLL.cs" />
     <Compile Include="XXYL\IXXYL_HPGBLL.cs" />
     <Compile Include="XXYL\IXXYL_HWBLL.cs" />
