--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -143,6 +143,8 @@
     <Compile Include="QZZP\IQZZP_JZZPBLL.cs" />
     <Compile Include="QZZP\IQZZP_QZZPBLL.cs" />
     <Compile Include="SHFW\ISHFW_SHFW_BJBLL.cs" />
+    <Compile Include="SHFW\ISHFW_SHFW_BJQXBLL.cs" />
+    <Compile Include="SHFW\ISHFW_SHFW_BMYSBLL.cs" />
     <Compile Include="XXYL\IXXYL_DIYSGFBLL.cs" />
     <Compile Include="XXYL\IXXYL_HPGBLL.cs" />
     <Compile Include="XXYL\IXXYL_HWBLL.cs" />
