--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -136,6 +136,8 @@
     <Compile Include="BLL\QZZP\QZZP_QZZPBLL.cs" />
     <Compile Include="BLL\RZGLBLL.cs" />
     <Compile Include="BLL\SHFW\SHFW_SHFW_BJBLL.cs" />
+    <Compile Include="BLL\SHFW\SHFW_SHFW_BJQXBLL.cs" />
+    <Compile Include="BLL\SHFW\SHFW_SHFW_BMYSBLL.cs" />
     <Compile Include="BLL\WDFBBLL.cs" />
     <Compile Include="BLL\WDSCBLL.cs" />
     <Compile Include="BLL\WDXJBLL.cs" />
