--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -138,6 +138,7 @@
     <Compile Include="BLL\SHFW\SHFW_SHFW_BJBLL.cs" />
     <Compile Include="BLL\SHFW\SHFW_SHFW_BJQXBLL.cs" />
     <Compile Include="BLL\SHFW\SHFW_SHFW_BMYSBLL.cs" />
+    <Compile Include="BLL\SHFW\SHFW_SHFW_KSHSXSBLL.cs" />
     <Compile Include="BLL\WDFBBLL.cs" />
     <Compile Include="BLL\WDSCBLL.cs" />
     <Compile Include="BLL\WDXJBLL.cs" />
