--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -145,6 +145,7 @@
     <Compile Include="SHFW\ISHFW_SHFW_BJBLL.cs" />
     <Compile Include="SHFW\ISHFW_SHFW_BJQXBLL.cs" />
     <Compile Include="SHFW\ISHFW_SHFW_BMYSBLL.cs" />
+    <Compile Include="SHFW\ISHFW_SHFW_KSHSXSBLL.cs" />
     <Compile Include="XXYL\IXXYL_DIYSGFBLL.cs" />
     <Compile Include="XXYL\IXXYL_HPGBLL.cs" />
     <Compile Include="XXYL\IXXYL_HWBLL.cs" />
