--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -371,7 +371,9 @@
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_BJ.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_BJQX.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_BMYS.css" />
+    <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_BZMD.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_GDSTQL.css" />
+    <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_JDWX.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_KSHSXS.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_SHPS.css" />
     <Content Include="Areas\Business\Css\WDFB.css" />
@@ -617,8 +619,12 @@
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_BJYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_BMYS.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_BMYSYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_BZMD.js" />
+    <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_BZMDYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_GDSTQL.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_GDSTQLYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_JDWX.js" />
+    <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_JDWXYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_KSHSXS.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_KSHSXSYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_SHPS.js" />
@@ -1127,7 +1133,9 @@
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_BJController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_BJQXController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_BMYSController.cs" />
+    <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_BZMDController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_GDSTQLController.cs" />
+    <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_JDWXController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_KSHSXSController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_SHPSController.cs" />
     <Compile Include="Areas\Business\Controllers\WDFBController.cs" />
@@ -1373,6 +1381,8 @@
     <Content Include="Areas\Business\Views\SHFW_SHFW_KSHSXS\SHFW_SHFW_KSHSXS.cshtml" />
     <Content Include="Areas\Business\Views\SHFW_SHFW_SHPS\SHFW_SHFW_SHPS.cshtml" />
     <Content Include="Areas\Business\Views\SHFW_SHFW_GDSTQL\SHFW_SHFW_GDSTQL.cshtml" />
+    <Content Include="Areas\Business\Views\SHFW_SHFW_BZMD\SHFW_SHFW_BZMD.cshtml" />
+    <Content Include="Areas\Business\Views\SHFW_SHFW_JDWX\SHFW_SHFW_JDWX.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
