--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Maps\SHFW\SHFW_SHFW_BJQXJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_BMYSJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_BZMDJBXX_Map.cs" />
+    <Compile Include="Maps\SHFW\SHFW_SHFW_DNWXJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_GDSTQLJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_JDWXJBXX_Map.cs" />
     <Compile Include="Maps\SHFW\SHFW_SHFW_KSHSXSJBXX_Map.cs" />
@@ -298,6 +299,7 @@
     <Compile Include="Models\SHFW\SHFW_SHFW_BJQXJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_BMYSJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_BZMDJBXX.cs" />
+    <Compile Include="Models\SHFW\SHFW_SHFW_DNWXJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_GDSTQLJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_JDWXJBXX.cs" />
     <Compile Include="Models\SHFW\SHFW_SHFW_KSHSXSJBXX.cs" />
