--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -146,6 +146,7 @@
     <Compile Include="SHFW\ISHFW_SHFW_BJQXBLL.cs" />
     <Compile Include="SHFW\ISHFW_SHFW_BMYSBLL.cs" />
     <Compile Include="SHFW\ISHFW_SHFW_BZMDBLL.cs" />
+    <Compile Include="SHFW\ISHFW_SHFW_DNWXBLL.cs" />
     <Compile Include="SHFW\ISHFW_SHFW_GDSTQLBLL.cs" />
     <Compile Include="SHFW\ISHFW_SHFW_JDWXBLL.cs" />
     <Compile Include="SHFW\ISHFW_SHFW_KSHSXSBLL.cs" />
