--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -373,6 +373,7 @@
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_BMYS.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_BZMD.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_DNWX.css" />
+    <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_FWWXDK.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_GDSTQL.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_JDWX.css" />
     <Content Include="Areas\Business\Css\SHFW\SHFW_SHFW_KSHSXS.css" />
@@ -624,6 +625,8 @@
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_BZMDYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_DNWX.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_DNWXYZ.js" />
+    <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_FWWXDK.js" />
+    <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_FWWXDKYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_GDSTQL.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_GDSTQLYZ.js" />
     <Content Include="Areas\Business\Scripts\Business\SHFW\SHFW_SHFW_JDWX.js" />
@@ -1138,6 +1141,7 @@
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_BMYSController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_BZMDController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_DNWXController.cs" />
+    <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_FWWXDKController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_GDSTQLController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_JDWXController.cs" />
     <Compile Include="Areas\Business\Controllers\SHFW\SHFW_SHFW_KSHSXSController.cs" />
@@ -1388,6 +1392,7 @@
     <Content Include="Areas\Business\Views\SHFW_SHFW_BZMD\SHFW_SHFW_BZMD.cshtml" />
     <Content Include="Areas\Business\Views\SHFW_SHFW_JDWX\SHFW_SHFW_JDWX.cshtml" />
     <Content Include="Areas\Business\Views\SHFW_SHFW_DNWX\SHFW_SHFW_DNWX.cshtml" />
+    <Content Include="Areas\Business\Views\SHFW_SHFW_FWWXDK\SHFW_SHFW_FWWXDK.cshtml" />
     <None Include="Properties\PublishProfiles\XXXZ.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
