--- a/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
+++ b/TianWen.XiaoZhen1Qu.Interface/TianWen.XiaoZhen1Qu.Interface.csproj
@@ -147,6 +147,7 @@
     <Compile Include="SHFW\ISHFW_SHFW_BMYSBLL.cs" />
     <Compile Include="SHFW\ISHFW_SHFW_BZMDBLL.cs" />
     <Compile Include="SHFW\ISHFW_SHFW_DNWXBLL.cs" />
+    <Compile Include="SHFW\ISHFW_SHFW_FWWXDKBLL.cs" />
     <Compile Include="SHFW\ISHFW_SHFW_GDSTQLBLL.cs" />
     <Compile Include="SHFW\ISHFW_SHFW_JDWXBLL.cs" />
     <Compile Include="SHFW\ISHFW_SHFW_KSHSXSBLL.cs" />
