--- a/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
+++ b/TianWen.XiaoZhen1Qu/TianWen.XiaoZhen1Qu.csproj
@@ -140,6 +140,7 @@
     <Compile Include="BLL\SHFW\SHFW_SHFW_BMYSBLL.cs" />
     <Compile Include="BLL\SHFW\SHFW_SHFW_BZMDBLL.cs" />
     <Compile Include="BLL\SHFW\SHFW_SHFW_DNWXBLL.cs" />
+    <Compile Include="BLL\SHFW\SHFW_SHFW_FWWXDKBLL.cs" />
     <Compile Include="BLL\SHFW\SHFW_SHFW_GDSTQLBLL.cs" />
     <Compile Include="BLL\SHFW\SHFW_SHFW_JDWXBLL.cs" />
     <Compile Include="BLL\SHFW\SHFW_SHFW_KSHSXSBLL.cs" />
